# PosePipeline

./: CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  pyproject.toml  sapiens_all_modes.py  test_sapiens_seg.py
.devcontainer/: devcontainer.json
doc/: Getting Started.ipynb  Getting_Started_Updated.ipynb
docker/: Dockerfile
notebooks/: open_mmlab_model_manager.ipynb
pose_pipeline/: __init__.py  pipeline.py
pose_pipeline/utils/: __init__.py  mhr.py  person_selection.py  standard_pipelines.py  thread_safe_conn.py  video_fetcher.py  video_format.py
pose_pipeline/wrappers/: _jax_backend.py  _pytorch_backend.py  bridging.py  face_bbox.py  face_estimation.py  hand_bbox.py  hand_estimation.py  hiera_movi87.py  mmdet.py  mmpose.py  sam3.py  sam3d_backend.py  sam3d_body.py  sam3d_body_vertex_mapping.json  sapiens.py
pose_pipeline/wrappers/mhr/data/: kp_hand_marker_mapping.json  kp_vertex_mapping_final.json  kp_vertex_mapping_full_hybrid.json  kp_vertex_mapping_hand_kinematic.json  kp_vertex_mapping_ideal_biomech_sites.json  kp_vertex_mapping_smplx.json  kp_vertex_mapping_with_kinematic.json
pose_pipeline/wrappers/yolov11/: model.py
scripts/: mmlab_install.sh  mmlab_install_mim.sh
scripts/utilities/: sapiens_overlays.py
tests/: test_bridging.py  test_mmlab_packages.py  test_models.py  test_person_selection.py  test_sapiens.py  test_video_fetcher.py
