[project]
name = "pose_pipeline"
version = "2024.01.14"
description = "Video pose analysis pipelines for DataJoint."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "datajoint>=0.14.2",
    "opencv-python==4.9.0.80",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
    "opencv-contrib-python==4.9.0.80",
    "matplotlib>=3.7",
    "numpy>1.24",
    "pyrender>=0.1.45",
    "numpy<2.0.0",    # tensorflow needs this for some reason otherwise it will fail silently
    "tensorflow[and-cuda]>=2.13.1",
    "tensorflow-hub>=0.16.1",
    "tf-keras>=2.15.0",
    "pycocotools>=2.0.7",
    "openmim==0.3.9",
    "motmetrics>=1.4.0"
]

[project.optional-dependencies]
build = ["setuptools>70", "pip>22"]
compile = ["chumpy>0.4"]
dev = ["pytest","ipython","ipywidgets","ipympl","seaborn"]

[tool.uv]
no-build-isolation-package = ["chumpy"]

[[tool.uv.dependency-metadata]]
name = "chumpy"
version = "0.70"
requires-dist = ["numpy>=1.8.1", "scipy>=0.13.0", "six>=1.11.0"]

[[tool.uv.dependency-metadata]]
name = "lap"
version = "0.4.0"
requires-dist = ["numpy>=1.10.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
