[project]
name = "pose_pipeline"
version = "2025.05.02"
description = "Video pose analysis pipelines for DataJoint."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datajoint>=0.14.2",
    "torch>=2.5.1",
    "torchvision",
    "torchaudio",
    "opencv-contrib-python >= 4.10",
    "matplotlib>=3.9.2",
    "numpy",
    "pyrender>=0.1.45",
    "tensorflow[and-cuda]>=2.14.0",
    "tensorflow-hub",
    "tf-keras>=2.18.0",
    "pycocotools==2.0.8",
    "openmim==0.3.9",
    "motmetrics>=1.4.0"
]

[project.optional-dependencies]
build = ["setuptools>70", "pip>22"]
compile = ["chumpy>0.4"]
dev = ["pytest","ipython","ipywidgets","ipympl","seaborn"]

[tool.uv]
no-build-isolation-package = ["chumpy"]

[[tool.uv.dependency-metadata]]
name = "chumpy"
version = "0.70"
requires-dist = ["numpy>=1.8.1", "scipy>=0.13.0", "six>=1.11.0"]

[[tool.uv.dependency-metadata]]
name = "lap"
version = "0.4.0"
requires-dist = ["numpy>=1.10.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
